--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -718,6 +718,8 @@
                       <img
                         src="{{ block.settings.first_image | image_url }}"
                         class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif%}"
+                        height="auto"
+                        width="auto"
                       >
                     {%- endif -%}
                     <span>{{- block.settings.first_heading -}}</span>
@@ -731,6 +733,8 @@
                       <img
                         src="{{ block.settings.second_image | image_url }}"
                         class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif%}"
+                        height="auto"
+                        width="auto"
                       >
                     {%- endif -%}
                     <span>{{- block.settings.second_heading -}}</span>
@@ -744,6 +748,8 @@
                       <img
                         src="{{ block.settings.third_image | image_url }}"
                         class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif%}"
+                        height="auto"
+                        width="auto"
                       >
                     {%- endif -%}
                     <span>{{- block.settings.third_heading -}}</span>
