--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -694,21 +694,23 @@
                 </p>
               {%- endif -%}
             {%- when 'icon-with-text' -%}
-              {%- if block.settings.first_icon == 'none' and block.settings.first_image == nil -%}
-                {%- assign isIconImage_1 = false -%}
-              {%- else -%}
-                {%- assign isIconImage_1 = true -%}
-              {%- endif -%}
-              {%- if block.settings.second_icon == 'none' and block.settings.second_image == nil -%}
-                {%- assign isIconImage_2 = false -%}
-              {%- else -%}
-                {%- assign isIconImage_2 = true -%}
-              {%- endif -%}
-              {%- if block.settings.third_icon == 'none' and block.settings.third_image == nil -%}
-                {%- assign isIconImage_3 = false -%}
-              {%- else -%}
-                {%- assign isIconImage_3 = true -%}
-              {%- endif -%}
+              {%- liquid
+                if block.settings.first_icon == 'none' and block.settings.first_image == nil
+                   assign isIconImage_1 = false
+                else
+                 assign isIconImage_1 = true
+                endif
+                 if block.settings.second_icon == 'none' and block.settings.second_image == nil
+                 assign isIconImage_2 = false
+                 else
+                assign isIconImage_2 = true
+                endif
+                 if block.settings.third_icon == 'none' and block.settings.third_image == nil
+                 assign isIconImage_3 = false
+                 else
+                  assign isIconImage_3 = true
+                endif
+              -%}
               <div class="{% if block.settings.layout == 'horizontal' %}icon-container-horizontal--space-{% if isIconImage_1 == false or isIconImage_2 == false or isIconImage_3 == false %}evenly{% else %}between{% endif %}{% else %}icon-container-vertical{% endif %}">
                 {%- unless block.settings.first_icon == 'none' and block.settings.first_image == nil -%}
                   <div class="{% if block.settings.layout == 'horizontal' %}icon-large{%else%}icon-small{% endif %}">
@@ -717,9 +719,10 @@
                     {%- else -%}
                       <img
                         src="{{ block.settings.first_image | image_url }}"
-                        class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif%}"
+                        class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif %}"
                         height="auto"
                         width="auto"
+                        loading="lazy"
                       >
                     {%- endif -%}
                     <span>{{- block.settings.first_heading -}}</span>
@@ -732,9 +735,10 @@
                     {%- else -%}
                       <img
                         src="{{ block.settings.second_image | image_url }}"
-                        class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif%}"
+                        class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif %}"
                         height="auto"
                         width="auto"
+                        loading="lazy"
                       >
                     {%- endif -%}
                     <span>{{- block.settings.second_heading -}}</span>
@@ -747,9 +751,10 @@
                     {%- else -%}
                       <img
                         src="{{ block.settings.third_image | image_url }}"
-                        class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif%}"
+                        class="{% if block.settings.layout == 'horizontal' %}image-large{% else %}image-small{% endif %}"
                         height="auto"
                         width="auto"
+                        loading="lazy"
                       >
                     {%- endif -%}
                     <span>{{- block.settings.third_heading -}}</span>
