--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -146,7 +146,7 @@
     {{ 'component-list-social.css' | asset_url | stylesheet_tag }}
 
     <script>
-      document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+      document.documentElement.className = document.documentElement.className.replace("no-js", "js");
     </script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
