--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -35,8 +35,7 @@
       >
         {% for recommendation in recommendations.products %}
           <li class="grid__item">
-            {%
-              render 'card-product',
+            {% render 'card-product',
               card_product: recommendation,
               media_aspect_ratio: section.settings.image_ratio,
               show_secondary_image: section.settings.show_secondary_image,
@@ -60,30 +59,30 @@
         observer.unobserve(this);
 
         fetch(this.dataset.url)
-          .then(response => response.text())
-          .then(text => {
-            const html = document.createElement('div');
+          .then((response) => response.text())
+          .then((text) => {
+            const html = document.createElement("div");
             html.innerHTML = text;
-            const recommendations = html.querySelector('product-recommendations');
+            const recommendations = html.querySelector("product-recommendations");
 
             if (recommendations && recommendations.innerHTML.trim().length) {
               this.innerHTML = recommendations.innerHTML;
             }
 
-            if (html.querySelector('.grid__item')) {
-              this.classList.add('product-recommendations--loaded');
+            if (html.querySelector(".grid__item")) {
+              this.classList.add("product-recommendations--loaded");
             }
           })
-          .catch(e => {
+          .catch((e) => {
             console.error(e);
           });
-      }
+      };
 
-      new IntersectionObserver(handleIntersection.bind(this), {rootMargin: '0px 0px 200px 0px'}).observe(this);
+      new IntersectionObserver(handleIntersection.bind(this), { rootMargin: "0px 0px 200px 0px" }).observe(this);
     }
   }
 
-  customElements.define('product-recommendations', ProductRecommendations);
+  customElements.define("product-recommendations", ProductRecommendations);
 {% endjavascript %}
 
 {% schema %}
