--- a/snippets/card-collection.liquid
+++ b/snippets/card-collection.liquid
@@ -113,7 +113,7 @@
               {%- endif %}
             </a>
           </h3>
-          {%- if card_collection.featured_image == nil and card_collection.description != blank -%}
+          {%- if card_collection.featured_image == null and card_collection.description != blank -%}
             <p class="card__caption">
               {{- card_collection.description | strip_html | truncatewords: 12 -}}
               <span class="icon-wrap">&nbsp;{% render 'icon-arrow' %}</span>
