--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -375,6 +375,6 @@
 
 <script>
   window.onload = () => {
-    typeof CustomerAddresses !== 'undefined' && new CustomerAddresses();
-  }
+    typeof CustomerAddresses !== "undefined" && new CustomerAddresses();
+  };
 </script>
