--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -725,7 +725,9 @@
                         loading="lazy"
                       >
                     {%- endif -%}
-                    <span>{{- block.settings.first_heading -}}</span>
+                    <span class="h4">
+                      {{- block.settings.first_heading -}}
+                    </span>
                   </div>
                 {%- endunless -%}
                 {%- unless isIconImage_2 == false -%}
@@ -741,7 +743,7 @@
                         loading="lazy"
                       >
                     {%- endif -%}
-                    <span>{{- block.settings.second_heading -}}</span>
+                    <span class="h4">{{- block.settings.second_heading -}}</span>
                   </div>
                 {%- endunless -%}
                 {%- unless isIconImage_3 == false -%}
@@ -757,7 +759,7 @@
                         loading="lazy"
                       >
                     {%- endif -%}
-                    <span>{{- block.settings.third_heading -}}</span>
+                    <span class="h4">{{- block.settings.third_heading -}}</span>
                   </div>
                 {%- endunless -%}
               </div>
