--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1725,7 +1725,8 @@
           "type": "text",
           "id": "first_heading",
           "default": "Heading",
-          "label": "t:sections.main-product.blocks.icon_with_text.settings.first_heading.label"
+          "label": "t:sections.main-product.blocks.icon_with_text.settings.first_heading.label",
+          "info": "t:sections.main-product.blocks.icon_with_text.settings.heading.info"
         },
         {
           "type": "select",
@@ -1920,7 +1921,8 @@
           "type": "text",
           "id": "second_heading",
           "default": "Heading",
-          "label": "t:sections.main-product.blocks.icon_with_text.settings.second_heading.label"
+          "label": "t:sections.main-product.blocks.icon_with_text.settings.second_heading.label",
+          "info": "t:sections.main-product.blocks.icon_with_text.settings.heading.info"
         },
         {
           "type": "select",
@@ -2115,7 +2117,8 @@
           "type": "text",
           "id": "third_heading",
           "default": "Heading",
-          "label": "t:sections.main-product.blocks.icon_with_text.settings.third_heading.label"
+          "label": "t:sections.main-product.blocks.icon_with_text.settings.third_heading.label",
+          "info": "t:sections.main-product.blocks.icon_with_text.settings.heading.info"
         }
       ]
     }
